--- a/js/react/arwes-demo/package.json
+++ b/js/react/arwes-demo/package.json
@@ -2,6 +2,7 @@
   "name": "arwes-demo",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://rawgit.com/emilyeserven/testwebsites/master/js/react/arwes-demo/build",
   "dependencies": {
     "arwes": "^1.0.0-alpha.5",
     "react": "^16.3.1",
